--- a/blocks/submenu-header/submenu-header.css
+++ b/blocks/submenu-header/submenu-header.css
@@ -13,8 +13,10 @@
 		margin: 0;
 		min-width: 100%;
 		top: calc(100%);
+		padding-top: 17px;
 		left: 0;
 		opacity: 0;
 		visibility: hidden;
+		z-index: 3;
 	}
 }
