--- a/blocks/header/__container/header__container.css
+++ b/blocks/header/__container/header__container.css
@@ -8,6 +8,12 @@
 	padding: 0 15px;
 }
 
+@media screen and (max-width: 1000px) {
+	.header__container {
+		min-height: 60px;
+	}
+}
+
 @media screen and (max-width: 768px) {
 	.header__container {
 		justify-content: center;
