--- a/blocks/header/__menu/header__menu.css
+++ b/blocks/header/__menu/header__menu.css
@@ -8,9 +8,9 @@
 		width: 100%;
 		height: 100vh;
 		left: -100%;
-		top: 80px;
+		top: 0;
 		background-color: #000D26;
-		z-index: 100;
+		z-index: 20;
 	}
 }
 
