--- a/blocks/main-block/__content/main-block__content.css
+++ b/blocks/main-block/__content/main-block__content.css
@@ -6,14 +6,6 @@
 
 @media screen and (max-width: 991.98px) {
 	.main-block__content   {
-		padding-left: 25px;
-		padding-right: 25px;
-	}
-}
-
-@media screen and (max-width: 767.98px) {
-	.main-block__content   {
-		padding-left: 16px;
-		padding-right: 16px;
+		padding-right: 0;
 	}
 }
