--- a/blocks/main-block/main-block.css
+++ b/blocks/main-block/main-block.css
@@ -1,6 +1,7 @@
 .main-block {
 	color: #FFFFFF;
-	padding: 92px 0 124px;
+	padding-top: 92px;
+	padding-bottom: 124px;
 	display: flex;
 	justify-content: center;
 	position: relative;
@@ -8,12 +9,14 @@
 
 @media screen and (max-width: 991.98px) {
 	.main-block  {
-		padding: 58px 0 120px;
+		padding-top: 58px;
+		padding-bottom: 120px;
 	}
 }
 
 @media screen and (max-width: 767.98px) {
 	.main-block  {
-		padding: 30px 0 60px;
+		padding-top: 30px;
+		padding-bottom: 60px;
 	}
 }
