--- a/blocks/words-about-us/__container/words-about-us__container.css
+++ b/blocks/words-about-us/__container/words-about-us__container.css
@@ -1,7 +1,13 @@
 .words-about-us__container {
 	max-width: 1440px;
-	width: 100%;
+	margin: 0 auto;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
+}
+
+@media screen and (max-width: 767px) {
+	.words-about-us__container {
+		align-items: flex-start;
+	}
 }
