--- a/blocks/words-about-us/__slider-block/words-about-us__slider-block.css
+++ b/blocks/words-about-us/__slider-block/words-about-us__slider-block.css
@@ -7,6 +7,7 @@
 	position: relative;
 	padding: 0 20px;
 	box-sizing: border-box;
+	overflow: hidden;
 }
 
 @media screen and (max-width: 991.98px) {
