--- a/blocks/words-about-us/__slider/words-about-us__slider.css
+++ b/blocks/words-about-us/__slider/words-about-us__slider.css
@@ -5,11 +5,13 @@
 @media screen and (max-width: 991.98px) {
 	.words-about-us__slider {
 		width: 100%;
+		margin-left: 28px;
 	}
 }
 
 @media screen and (max-width: 767.98px) {
 	.words-about-us__slider {
 		width: calc(100%);
+		margin-left: 0;
 	}
 }
