--- a/blocks/words-about-us/__title-block/words-about-us__title-block.css
+++ b/blocks/words-about-us/__title-block/words-about-us__title-block.css
@@ -1,3 +1,15 @@
 .words-about-us__title-block {
-	padding: 0 16px;
+	padding: 0 15px;
+}
+
+@media screen and (max-width: 992px) {
+	.words-about-us__title-block {
+		padding: 0 40px;
+	}
+}
+
+@media screen and (max-width: 767px) {
+	.words-about-us__title-block {
+		padding: 0 15px;
+	}
 }
